tests/compile-errors/src/type-mismatch.stderr
error[E0308]: mismatched types
 --> $DIR/type-mismatch.rs:3:1
  |
3 | usdt::dtrace_provider!("../../../tests/compile-errors/providers/type-mismatch.d");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u8`, found `f32`
...
7 |     mismatch_bad!(|| (bad));
  |     ------------------------ in this macro invocation
  |
  = note: this error originates in the macro `mismatch_bad` (in Nightly builds, run with -Z macro-backtrace for more info)
